test/foof/errors/syntax-forms.foo
(begin
  (quote)
  (quasiquote)
  (unquote)
  (unquote-splicing)
  (quote 23)
  (quasiquote 23)
  (unquote 23)
  (unquote-splicing 23)
  (quote 23 5)
  (quasiquote foo bar baz)
  (unquote 23 4)
  (unquote-splicing test test test)
  (if)
  (if cond)
  (if cond then)
  (if cond then else)
  (if cond then else whats going on ???)
  (do)
  (do some things))
